[tool.poetry]
name = "makinet_controlplane"
version = "0.0.1-alpha.1"
description = ""
authors = ["XYCode <xycode-xyc@outlook.com>"]
license = "LGPL-2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
rich = "^13.9.4"
loguru = "^0.7.3"
fastapi = "^0.115.6"
typer = "^0.15.1"
uvicorn = "^0.34.0"
pydantic = "^2.10.5"
bson = "^0.5.10"
toml = "^0.10.2"

[tool.poetry.scripts]
makinet = "makinet_controlplane.cli"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"